[package]
authors = ["pleme-io"]
description = "lava-operator — typed Kubernetes controller for the LavaArchitecture CRD. Operators submit a LavaArchitecture manifest naming a .tlisp source + bindings + gate; the controller renders via magma-lava + applies via the embedded magma path (or shells out to tofu/terraform). Status conditions track Synthesized / Planned / Applied / Failed phases. Pangea-operator analog for the lava + tatara-lisp stack."
edition = "2024"
license = "MIT"
name = "lava-operator"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-operator"
version = "0.3.1"

[lib]
name = "lava_operator"
path = "src/lib.rs"

[[bin]]
name = "lava-operator"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[features]
default = []
# `controller` pulls in kube-rs + tokio + futures and exposes the
# real reconcile-loop binary entry point. Library consumers that only
# need the typed CRD + state machine can stay on the default feature set.
controller = [
  "dep:kube",
  "dep:k8s-openapi",
  "dep:tokio",
  "dep:futures",
  "dep:schemars",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:anyhow",
]
# `magma-bridge` plugs magma-lava in as the synthesize backend. Use
# together with `controller` to get the binary's `run` subcommand
# driving real .tlisp → terraform.json synthesis in cluster.
magma-bridge = ["dep:magma-lava"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"

# Feature-gated kube-rs stack.
kube = { version = "0.97", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], optional = true }
futures = { version = "0.3", optional = true }
schemars = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
anyhow = { version = "1", optional = true }

# magma bridge — opt-in only via --features magma-bridge.
magma-lava = { git = "https://github.com/pleme-io/magma-lava", branch = "main", optional = true }
